Fix avatar skeleyon background in dark mode

--- a/src/components/VideoCard/index.module.less
+++ b/src/components/VideoCard/index.module.less
@@ -180,17 +180,32 @@
   }
 }
 
+:global {
+  body {
+    .bili-video-card__skeleton--cover,
+    .bili-video-card__skeleton--text,
+    .bili-video-card__skeleton--light,
+    .bili-video-card__skeleton--avatar {
+      background: linear-gradient(
+        135deg,
+        rgba(0, 0, 0, 0.06) 25%,
+        rgba(0, 0, 0, 0.15) 37%,
+        rgba(0, 0, 0, 0.06) 63%
+      );
+    }
+  }
+
+  // other type already handled by Bilibili-Evolved
+  body.dark .bili-video-card__skeleton--avatar {
+    background-color: #444;
+  }
+}
+
 .skeleton-active {
   :global(.bili-video-card__skeleton--cover),
   :global(.bili-video-card__skeleton--text),
   :global(.bili-video-card__skeleton--light),
   :global(.bili-video-card__skeleton--avatar) {
-    background: linear-gradient(
-      135deg,
-      rgba(0, 0, 0, 0.06) 25%,
-      rgba(0, 0, 0, 0.15) 37%,
-      rgba(0, 0, 0, 0.06) 63%
-    );
     background-size: 400% 100%;
     animation-name: ant-skeleton-loading;
     animation-duration: 2.165s;
